fixed some style and layout issues

--- a/application.css
+++ b/application.css
@@ -25,7 +25,7 @@ p.lead {
     line-height: 124px;
 }
 
-.thermometer {
+.thermometer, .order, .social {
     height: 40px;
     line-height: 40px;
 }
